--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -1,6 +1,7 @@
 theme_advanced_toolbar_location: top
 theme_advanced_toolbar_align: left
 theme_advanced_statusbar_location: bottom
+font_size_style_values : "xx-small,x-small,small,medium,large,x-large,xx-large"
 theme_advanced_buttons3_add:
   - tablecontrols
   - fullscreen
